banner section image overlap position fixed

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,22 +2,37 @@
   background-color: white;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 10rem;
   padding: 0 5%;
-  filter: drop-shadow(0 4px 3px rgba(167, 138, 138, 0.07));
+  padding-bottom: 10rem;
+  filter: drop-shadow(0 15px 3px rgba(167, 138, 138, 0.034));
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
 }
-
-.banner-right img {
+.banner-header{
+    color: #3F3F3F;
+    font-family: Poppins;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 .banner-right {
   margin: auto auto;
   position: relative;
 }
 .img101 {
+    z-index: 10;
   width: 100%;
+  transform: rotate(59.691deg);
+
 }
 .img102 {
-  width: 50%;
+    z-index: -10;
+  width: 100%;
+  transform: rotate(-120.309deg);
   position: absolute;
   left: 0;
+  
 }
