--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Poppins", sans-serif;
   background: #fcfcfc;
+  color:  #3F3F3F;
 }
 
 h2 {
